Fix footer overlap on car page and duplicate line on home

--- a/front/src/app/scss/blocks/sections/_faq-section.scss
+++ b/front/src/app/scss/blocks/sections/_faq-section.scss
@@ -222,6 +222,10 @@
             padding-bottom: 25px;
             margin-bottom: 8px;
         }
+
+        .acc__item:last-of-type {
+            border-bottom: none;
+        }
     }
 
     @include tablet {
