--- a/front/src/app/scss/blocks/sections/_single-section.scss
+++ b/front/src/app/scss/blocks/sections/_single-section.scss
@@ -2,8 +2,8 @@
 @use "../../mixins/disable-mob-hover" as *;
 
 .single-section {
-  padding: clamp(15px, 1.6176vw, 22px) 0 0;
-  margin-bottom: 20px;
+  padding: clamp(15px, 1.6176vw, 22px) 0 var(--default-padding);
+  margin-bottom: 0;
 
   .breadcrumbs {
     @include for-mobile{
